--- a/UI/index.html
+++ b/UI/index.html
@@ -34,7 +34,7 @@
           <h1>Welcome to politico</h1>
           <p>Are you a politician who wants to contest in the elections?<span id="politicianWelcome"><a href="#">click here</a></span></p>
           <p>To Create a Petition <span id="politicianWelcome"><a href="#">click here</a></span></p>
-          <div class="button_cont"><a class="login_button" href="add-website-here" target="_blank" rel="nofollow noopener">Login as User</a></div>
+          <div class="button_cont"><a class="login_button" href="user_login.html" target="_blank" rel="nofollow noopener">Login as User</a></div>
         </div>
       </section>
 
