[feature #163414378] Add politician select page

--- a/UI/politician_select.html
+++ b/UI/politician_select.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Politico | Welcome</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Politico | Politician</title>
     <link href='img/favicon.ico' rel='icon' type='image/x-icon'/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login_style.css">
     <script type="text/javascript" src="js/style.js"></script>
   </head>
   <body>
@@ -31,10 +32,9 @@
 
       <section id="welcome">
         <div class="container">
-          <h1>Welcome to politico</h1>
-          <p>Are you a politician who wants to contest in the elections?<span id="politicianWelcome"><a href="politician_select.html">click here</a></span></p>
-          <p>To Create a Petition <span id="politicianWelcome"><a href="politician_write_petition.html">click here</a></span></p>
-          <div class="button_cont"><a class="login_button" href="user_login.html" target="_blank" rel="nofollow noopener">Login as User</a></div>
+          <h1>Choose an option below</h1>
+            <a href="politician_express_interest.html" id="options">Become a Candidate</a><br>
+            <a href="politician_write_petition.html" id="options">Create a Petition</a><br>
         </div>
       </section>
 
@@ -64,8 +64,8 @@
         </div>
       </section>
 
-      <footer>
-        <p>Andela BootCamp Project by Aniebiet Akpan (2019)</p>
-      </footer>
+    <footer>
+      <p>Andela BootCamp Project by Aniebiet Akpan (2019)</p>
+    </footer>
   </body>
 </html>
