[feature #163506074] Fix petition and express interest pages

--- a/UI/politician_express_interest.html
+++ b/UI/politician_express_interest.html
@@ -61,7 +61,7 @@
                   <label for="passport">Upload Passport (Max size: 200KB)</label>
                   <input type="file" id="passport" name="passport" accept="images/*"><br>
 
-                  <label for="whyrun"><h2 id="reasons">Tell Us Why You Want To Run:</h2></label><br>
+                  <label for="whyrun"><h2 id="reasons">Tell Us Why You Want To Run</h2></label><br>
                   <label for="whyrun"><pre>           </pre></label>
                   <textarea id="whyrun" maxlength="300" placeholder="  summarise in 300 characters."></textarea>
 
