--- a/UI/politician_write_petition.html
+++ b/UI/politician_write_petition.html
@@ -44,7 +44,7 @@
                     <option value="3">Office3</option>
                   </select> <br>
 
-                  <label for="whypetition"><h2 id="reasons">Write Petition:</h2></label><br>
+                  <label for="whypetition"><h2 id="reasons">Write Petition</h2></label><br>
                   <label for="whypetition"><pre>           </pre></label>
                   <textarea id="whypetition" placeholder=" write petition here (in 300 characters)" maxlength="300"></textarea>
 
