--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <section id="welcome">
         <div class="container">
-          <h1>Welcome to politico</h1>
+          <marquee behavior="left" scrollamount="10"><h1 style="font-style: helvetica">Welcome to Politico</h1></marquee>
           <p>Are you a politician who wants to contest in the elections?<span id="politicianWelcome"><a href="politician_select.html">click here</a></span></p>
           <p>To Create a Petition <span id="politicianWelcome"><a href="politician_write_petition.html">click here</a></span></p>
           <div class="button_cont"><a class="login_button" href="user_login.html" target="_blank" rel="nofollow noopener">Login as User</a></div>
@@ -40,7 +40,7 @@
 
       <section id="quicklinks">
         <div class="container">
-          <h1>Quicklinks (For Citizens Only)</h1>
+          <marquee behavior="left" scrollamount="10"><h1>Quicklinks (For Citizens Only)</h1></marquee>
         </div>
       </section>
 
