--- a/user_login.html
+++ b/user_login.html
@@ -32,9 +32,9 @@
 
       <section id="welcome">
         <div class="container">
-          <h1>Welcome to politico</h1>
+            <marquee behavior="left" scrollamount="10"><h1>Welcome to politico</h1></marquee>
             <!-- Login container starts here -->
-              <form>
+              <form action="">
                   <label for="email">Email Add:</label>
                   <input type="text" id="email" name="email"><br>
                   <label for="password">Password:</label>
@@ -50,7 +50,7 @@
 
       <section id="quicklinks">
         <div class="container">
-          <h1>Quicklinks (For Citizens Only)</h1>
+          <marquee behavior="left" scrollamount="10"><h1>Quicklinks (For Citizens Only)</h1></marquee>
         </div>
       </section>
 
