--- a/UI/admin_edit_party.html
+++ b/UI/admin_edit_party.html
@@ -64,7 +64,7 @@
 
       <section id="quicklinks">
         <div class="container">
-          <h1>Quicklinks (For Citizens Only)</h1>
+          <marquee behavior="left" scrollamount="10"><h1>Quicklinks (For Citizens Only)</h1></marquee>
         </div>
       </section>
 
