[bug #163507296] Edit link in homepage

--- a/UI/index.html
+++ b/UI/index.html
@@ -32,7 +32,7 @@
       <section id="welcome">
         <div class="container">
           <marquee behavior="left" scrollamount="10"><h1 style="font-style: helvetica">Welcome to Politico</h1></marquee>
-          <p>Are you a politician who wants to contest in the elections?<span id="politicianWelcome"><a href="politician_select.html">click here</a></span></p>
+          <p>Are you a politician who wants to contest in the elections?<span id="politicianWelcome"><a href="politician_express_interest.html">click here</a></span></p>
           <p>To Create a Petition <span id="politicianWelcome"><a href="politician_write_petition.html">click here</a></span></p>
           <div class="button_cont"><a class="login_button" href="user_login.html" target="_blank" rel="nofollow noopener">Login as User</a></div>
         </div>
