--- a/user_login.html
+++ b/user_login.html
@@ -32,13 +32,13 @@
 
       <section id="welcome">
         <div class="container">
-            <marquee behavior="left" scrollamount="10"><h1>Welcome to politico</h1></marquee>
+             <h1>Welcome to politico</h1>  
             <!-- Login container starts here -->
-              <form action="">
-                  <label for="email">Email Add:</label>
-                  <input type="text" id="email" name="email"><br>
-                  <label for="password">Password:</label>
-                  <input type="password" id="password" name="password">
+              <form action="user_profile.html">
+                  <label id="inputId" for="email">Email:</label>
+                  <input id="inputField" type="text" id="email" name="email"><br>
+                  <label id="inputId" for="password">Password:</label>
+                  <input id="inputField" type="password" id="password" name="password">
                   <div id="lower">
                       <input type="checkbox"><label class="check" for="checkbox">Keep me logged in</label>
                       <input type="submit" value="Login">
@@ -50,7 +50,7 @@
 
       <section id="quicklinks">
         <div class="container">
-          <marquee behavior="left" scrollamount="10"><h1>Quicklinks (For Citizens Only)</h1></marquee>
+           <h1>Quicklinks (For Citizens Only)</h1>  
         </div>
       </section>
 
