--- a/user_signup.html
+++ b/user_signup.html
@@ -35,24 +35,24 @@
           <h1>User Sign Up</h1>
             <!-- Login container starts here -->
               <form>
-                  <label for="firstname">First Name:</label>
-                  <input type="text" id="username" name="firstname" placeholder="enter first name"><br>
-                  <label for="lastname">Last Name:</label>
-                  <input type="text" id="lastname" name="lastname" placeholder="enter last name"><br>
-                  <label for="othername">Other Name:</label>
-                  <input type="text" id="othername" name="othername" placeholder="enter other name"><br>
-                  <label for="email">Email:</label>
-                  <input type="text" id="email" name="email" placeholder="enter email"><br>
-                  <label for="phonenumber">Phone Number:</label>
-                  <input type="text" id="phonenumber" name="phonenumber" placeholder="enter phone number"><br>
-                  <label for="password">Password:</label>
-                  <input type="password" id="password" name="password" placeholder="enter password"><br>
-                  <label for="cpassword">Confirm:</label>
-                  <input type="password" id="cpassword" name="cpassword" placeholder="confirm password"><br>
-                  <label for="location">Location:</label>
+                  <label id="inputId" for="firstname">First Name:</label>
+                  <input type="text" id="inputField" name="firstname" placeholder="enter first name"><br>
+                  <label id="inputId" for="lastname">Last Name:</label>
+                  <input type="text" id="inputField" name="lastname" placeholder="enter last name"><br>
+                  <label id="inputId" for="othername">Other Name:</label>
+                  <input type="text" id="inputField" name="othername" placeholder="enter other name"><br>
+                  <label id="inputId" for="email">Email:</label>
+                  <input type="text" id="inputField" name="email" placeholder="enter email"><br>
+                  <label id="inputId" for="phonenumber">Phone Number:</label>
+                  <input type="text" id="inputField" name="phonenumber" placeholder="enter phone number"><br>
+                  <label id="inputId" for="password">Password:</label>
+                  <input type="password" id="inputField" name="password" placeholder="enter password"><br>
+                  <label id="inputId" for="cpassword">Confirm:</label>
+                  <input type="password" id="inputField" name="cpassword" placeholder="confirm password"><br>
+                  <label id="inputId" for="location">Location:</label>
                   <input type="text" id="location" name="location" placeholder="enter city where you live"><br>
-                  <label for="passport">Upload Passport (Max size: 200KB)</label>
-                  <input type="file" id="passport" name="passport" accept="images/*">
+                  <label id="inputId" for="passport">Upload Passport (Max size: 200KB)</label>
+                  <input type="file" id="inputField" name="passport" accept="images/*">
                   <div id="lower">
                      <input type="submit" value="Sign Up">
                   </div><!--/ lower-->
@@ -63,7 +63,7 @@
 
       <section id="quicklinks">
         <div class="container">
-          <marquee behavior="left" scrollamount="10"><h1>Quicklinks (For Citizens Only)</h1></marquee>
+           <h1>Quicklinks (For Citizens Only)</h1>  
         </div>
       </section>
 
