--- a/admin_delete_party.html
+++ b/admin_delete_party.html
@@ -16,13 +16,13 @@
 
         <ul id="navlist">
           <pre>   </pre>
-          <li><a id="li1" href="admin_create_party.html">Create Party</a></li>
-          <li><a id="li2" href="admin_edit_party.html">Edit Party</a></li>
-          <li><a id="li3" href="admin_delete_party.html">Delete Party</a></li>
-          <li><a id="li3" href="admin_create_office.html">Create Office</a></li>
+          <li class="navitem"><a    href="admin_create_party.html">Create Party</a></li>
+          <li class="navitem"><a    href="admin_edit_party.html">Edit Party</a></li>
+          <li class="navitem"><a id="li3" href="admin_delete_party.html">Delete Party</a></li>
+          <li class="navitem"><a id="li3" href="admin_create_office.html">Create Office</a></li>
           <pre>            </pre>
-          <li id="login"><a href="user_login.html"><span id="spnLogin">Logout</span></a></li>
-<!--             <li id="signup"><a href="user_signup.html"><span id="spnSignup">Sign Up</span></a></li>
+          <li  class="navitem" id="login"><a href="user_login.html"><span id="spnLogin">Logout</span></a></li>
+<!--             <li  id="signup"><a href="user_signup.html"><span id="spnSignup">Sign Up</span></a></li>
 -->
         </ul>
       </nav>
@@ -59,7 +59,7 @@
       </section>
 
       <section id="boxes">
-        <div class="container">
+        <div id="quickboxes" class="container">
           <div class="box">
             <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
             <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
@@ -78,7 +78,7 @@
         </div>
       </section>
       <section id="boxes">
-        <div class="container">
+        <div id="quickboxes" class="container">
           <div class="box">
             <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
             <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
