--- a/admin_login.html
+++ b/admin_login.html
@@ -39,7 +39,7 @@
         </div>
       </section>
       <section id="boxes">
-        <div class="container">
+        <div id="quickboxes" class="container">
           <div class="box">
             <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
             <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
