--- a/admin_create_office.html
+++ b/admin_create_office.html
@@ -16,13 +16,13 @@
 
         <ul id="navlist">
           <pre>   </pre>
-          <li><a id="li1" href="admin_create_party.html">Create Party</a></li>
-          <li><a id="li2" href="admin_edit_party.html">Edit Party</a></li>
-          <li><a id="li3" href="admin_delete_party.html">Delete Party</a></li>
-          <li><a id="li3" href="admin_create_office.html">Create Office</a></li>
+          <li class="navitem"><a    href="admin_create_party.html">Create Party</a></li>
+          <li class="navitem"><a    href="admin_edit_party.html">Edit Party</a></li>
+          <li class="navitem"><a id="li3" href="admin_delete_party.html">Delete Party</a></li>
+          <li class="navitem"><a id="li3" href="admin_create_office.html">Create Office</a></li>
           <pre>            </pre>
-          <li id="login"><a href="user_login.html"><span id="spnLogin">Logout</span></a></li>
-<!--             <li id="signup"><a href="user_signup.html"><span id="spnSignup">Sign Up</span></a></li>
+          <li  class="navitem" id="login"><a href="user_login.html"><span id="spnLogin">Logout</span></a></li>
+<!--             <li  id="signup"><a href="user_signup.html"><span id="spnSignup">Sign Up</span></a></li>
 -->
         </ul>
       </nav>
@@ -55,27 +55,30 @@
         </div>
       </section>
       <section id="boxes">
-        <div class="container">
-          <div class="box">
-            <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
-            <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
-            <p>View all political parties contesting for the 2019 General Elections.</p>
+          <div id="quickboxes" class="box_links">
+            <div class="box">
+              <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
+              <a href="user_view_parties.html"><h5>View All Political Parties</h5></a>
+              <p>View all political parties contesting for the 2019 General Elections.</p>
+            </div>
+            <div class="box">
+              <a href="user_view_politicians.html"><img src="./img/politicians.jpg"></a>
+              <a href="user_view_politicians.html"><h5>View All Politicians</h5></a>
+              <p>View all politicians contesting for the 2019 General Elections</p>
+            </div>
+            <div class="box">
+              <a href="user_vote.html"><img src="./img/vote.jpg"></a>
+              <a href="user_vote.html"><h5>Vote</h5></a>
+              <p>Vote for a politician of your choice</p>
+            </div>
+  
           </div>
-          <div class="box">
-            <a href="user_view_politicians.html"><img src="./img/politicians.jpg"></a>
-            <a href="user_view_politicians.html"><h3>View All Politicians</h3></a>
-            <p>View all politicians contesting for the 2019 General Elections</p>
-          </div>
-          <div class="box">
-            <a href="user_vote.html"><img src="./img/vote.jpg"></a>
-            <a href="user_vote.html"><h3>Vote</h3></a>
-            <p>Vote for a politician of your choice</p>
-          </div>
-        </div>
-      </section>
-      <footer>
-        <p id="footer-links"><a href="index.html">Home&nbsp&nbsp&nbsp</a><a href="politician_select.html">Politician&nbsp&nbsp&nbsp</a><a href="about.html">About</a></p>
-      <p>Andela BootCamp Project by Aniebiet Akpan (2019)</p>
-    </footer>
+          <div id="footer-div">
+              <footer>
+                <p>Andela BootCamp Project by Aniebiet Akpan (2019)<br><span><a href="#">Home</a>&nbsp&nbsp|&nbsp</span><span><a href="#">View Profile</a>&nbsp|&nbsp</span><span><a href="#">Admin</a></span>
+                </p>
+              </footer>
+            </div>
+        </section>
   </body>
 </html>
