--- a/admin_create_party.html
+++ b/admin_create_party.html
@@ -11,24 +11,24 @@
   </head>
   <body>
     <header id="header">
-        <div class="logo">Politico</div>
-        <nav id="headernav">
+      <div class="logo">Politico</div>
+      <nav id="headernav">
 
-          <ul id="navlist">
-            <pre>   </pre>
-            <li><a id="li1" href="admin_create_party.html">Create Party</a></li>
-            <li><a id="li2" href="admin_edit_party.html">Edit Party</a></li>
-            <li><a id="li3" href="admin_delete_party.html">Delete Party</a></li>
-            <li><a id="li3" href="admin_create_office.html">Create Office</a></li>
-            <pre>            </pre>
-            <li id="login"><a href="user_login.html"><span id="spnLogin">Logout</span></a></li>
-<!--             <li id="signup"><a href="user_signup.html"><span id="spnSignup">Sign Up</span></a></li>
- -->
-          </ul>
-        </nav>
+        <ul id="navlist">
+          <pre>   </pre>
+          <li class="navitem"><a    href="admin_create_party.html">Create Party</a></li>
+          <li class="navitem"><a    href="admin_edit_party.html">Edit Party</a></li>
+          <li class="navitem"><a id="li3" href="admin_delete_party.html">Delete Party</a></li>
+          <li class="navitem"><a id="li3" href="admin_create_office.html">Create Office</a></li>
+          <pre>            </pre>
+          <li  class="navitem" id="login"><a href="user_login.html"><span id="spnLogin">Logout</span></a></li>
+<!--             <li  id="signup"><a href="user_signup.html"><span id="spnSignup">Sign Up</span></a></li>
+-->
+        </ul>
+      </nav>
 
-        <div class="toggle-menu"><i class="toggle-items" aria-hidden="true"><img src="img/btnToggle.png"></i></div>
-      </header>
+      <div class="toggle-menu"><i class="toggle-items" aria-hidden="true"><img src="img/btnToggle.png"></i></div>
+    </header>
 
       <section id="welcome">
         <div class="container">
@@ -48,7 +48,7 @@
         </div>
       </section>
       <section id="boxes">
-        <div class="container">
+        <div id="quickboxes" class="container">
           <div class="box">
             <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
             <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
