fixed my UI: updating gh-pages

--- a/admin_create_office.html
+++ b/admin_create_office.html
@@ -55,27 +55,10 @@
         </div>
       </section>
       <section id="boxes">
-          <div id="quickboxes" class="box_links">
-            <div class="box">
-              <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
-              <a href="user_view_parties.html"><h5>View All Political Parties</h5></a>
-              <p>View all political parties contesting for the 2019 General Elections.</p>
-            </div>
-            <div class="box">
-              <a href="user_view_politicians.html"><img src="./img/politicians.jpg"></a>
-              <a href="user_view_politicians.html"><h5>View All Politicians</h5></a>
-              <p>View all politicians contesting for the 2019 General Elections</p>
-            </div>
-            <div class="box">
-              <a href="user_vote.html"><img src="./img/vote.jpg"></a>
-              <a href="user_vote.html"><h5>Vote</h5></a>
-              <p>Vote for a politician of your choice</p>
-            </div>
-  
-          </div>
           <div id="footer-div">
               <footer>
-                <p>Andela BootCamp Project by Aniebiet Akpan (2019)<br><span><a href="#">Home</a>&nbsp&nbsp|&nbsp</span><span><a href="#">View Profile</a>&nbsp|&nbsp</span><span><a href="#">Admin</a></span>
+                <p>Andela BootCamp Project by Aniebiet Akpan (2019)
+                  <!-- <br><span><a href="#">Home</a>&nbsp&nbsp|&nbsp</span><span><a href="#">View Profile</a>&nbsp|&nbsp</span><span><a href="#">Admin</a></span> -->
                 </p>
               </footer>
             </div>
