--- a/admin_delete_party.html
+++ b/admin_delete_party.html
@@ -59,45 +59,13 @@
       </section>
 
       <section id="boxes">
-        <div id="quickboxes" class="container">
-          <div class="box">
-            <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
-            <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
-            <p>View all political parties contesting for the 2019 General Elections.</p>
-          </div>
-          <div class="box">
-            <a href="user_view_politicians.html"><img src="./img/politicians.jpg"></a>
-            <a href="user_view_politicians.html"><h3>View All Politicians</h3></a>
-            <p>View all politicians contesting for the 2019 General Elections</p>
-          </div>
-          <div class="box">
-            <a href="user_vote.html"><img src="./img/vote.jpg"></a>
-            <a href="user_vote.html"><h3>Vote</h3></a>
-            <p>Vote for a politician of your choice</p>
-          </div>
-        </div>
+        
       </section>
       <section id="boxes">
-        <div id="quickboxes" class="container">
-          <div class="box">
-            <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
-            <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
-            <p>View all political parties contesting for the 2019 General Elections.</p>
-          </div>
-          <div class="box">
-            <a href="user_view_politicians.html"><img src="./img/politicians.jpg"></a>
-            <a href="user_view_politicians.html"><h3>View All Politicians</h3></a>
-            <p>View all politicians contesting for the 2019 General Elections</p>
-          </div>
-          <div class="box">
-            <a href="user_vote.html"><img src="./img/vote.jpg"></a>
-            <a href="user_vote.html"><h3>Vote</h3></a>
-            <p>Vote for a politician of your choice</p>
-          </div>
-        </div>
+        
       </section>
     <footer>
-      <p id="footer-links"><a href="index.html">Home&nbsp&nbsp&nbsp</a><a href="politician_select.html">Politician&nbsp&nbsp&nbsp</a><a href="about.html">About</a></p>
+      <!-- <p id="footer-links"><a href="index.html">Home&nbsp&nbsp&nbsp</a><a href="politician_select.html">Politician&nbsp&nbsp&nbsp</a><a href="about.html">About</a></p> -->
       <p>Andela BootCamp Project by Aniebiet Akpan (2019)</p>
     </footer>
   </body>
