--- a/admin_login.html
+++ b/admin_login.html
@@ -26,11 +26,11 @@
         <div class="container">
           <h1>Admin Panel: Login</h1>
             <!-- Login container starts here -->
-              <form action="admin_create_party.html">
-                  <label for="username">Username:</label>
-                  <input type="text" id="username" name="username"><br>
-                  <label for="password">Password:</label>
-                  <input type="password" id="password" name="password">
+              <form action="admin_view_politicians.html">
+                  <label id="inputId" for="username">Username:</label>
+                  <input id="inputField" type="text" id="username" name="username"><br>
+                  <label id="inputId" for="password">Password:</label>
+                  <input id="inputField" type="password" id="password" name="password">
                   <div id="lower">
                       <input type="submit" value="Login">
                   </div><!--/ lower-->
@@ -39,27 +39,11 @@
         </div>
       </section>
       <section id="boxes">
-        <div id="quickboxes" class="container">
-          <div class="box">
-            <a href="user_view_parties.html"><img src="./img/parties.jpg"></a>
-            <a href="user_view_parties.html"><h3>View All Political Parties</h3></a>
-            <p>View all political parties contesting for the 2019 General Elections.</p>
-          </div>
-          <div class="box">
-            <a href="user_view_politicians.html"><img src="./img/politicians.jpg"></a>
-            <a href="user_view_politicians.html"><h3>View All Politicians</h3></a>
-            <p>View all politicians contesting for the 2019 General Elections</p>
-          </div>
-          <div class="box">
-            <a href="user_vote.html"><img src="./img/vote.jpg"></a>
-            <a href="user_vote.html"><h3>Vote</h3></a>
-            <p>Vote for a politician of your choice</p>
-          </div>
-        </div>
+        
       </section>
 
     <footer>
-      <p id="footer-links"><a href="index.html">Home&nbsp&nbsp&nbsp</a><a href="politician_select.html">Politician&nbsp&nbsp&nbsp</a><a href="about.html">About</a></p>
+      <!-- <p id="footer-links"><a href="index.html">Home&nbsp&nbsp&nbsp</a><a href="politician_select.html">Politician&nbsp&nbsp&nbsp</a><a href="about.html">About</a></p> -->
       <p>Andela BootCamp Project by Aniebiet Akpan (2019)</p>
     </footer>
   </body>
